--- a/.github/workflows/test-and-build-workflow.yml
+++ b/.github/workflows/test-and-build-workflow.yml
@@ -33,7 +33,7 @@ jobs:
           java-version: 1.14
 
       - name: Build with Gradle
-        run: sudo ./gradlew build assemble
+        run: sudo ./gradlew integTest
 
       - name: Create Artifact Path
         run: |
